--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.3.1",
+    "eslint-config-prettier": "^6.0.0",
     "graphql": "^14.3.0",
     "graphql-tag": "^2.10.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^1.1.4",
+    "styled-components": "^3.3.2",
+    "styled-reset": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-plugin-react": "^7.14.2"
   }
 }
