--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "eslint-config-prettier": "^6.0.0",
     "graphql": "^14.3.0",
     "graphql-tag": "^2.10.1",
+    "js-yaml": "^3.13.1",
+    "mem": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
@@ -15,7 +17,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "^1.1.4",
     "styled-components": "^3.3.2",
-    "styled-reset": "^1.3.5"
+    "styled-reset": "^1.3.5",
+    "webpack-dev-server": "^3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
